--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    width: 1920px;
+    min-width: 1300px;
     font-family: "Lato", sans-serif;
     display: flex;
     flex-direction: column;
@@ -21,7 +21,7 @@ body{
 
 .container{
     display: flex;
-    width: 1440px;
+    width: 1140px;
     justify-content: space-between;
     align-items: center;
     
@@ -44,14 +44,14 @@ button{
 }
 
 .title{
-    font-size: 60px;
+    font-size: 3rem;
     font-weight: bold;
     color: #01996D;
     line-height: 150%;
 }
 
 .subtitle{
-    font-size: 25px;
+    font-size: 1rem;
     color: #424242;
     margin: 0;
 }
@@ -186,7 +186,7 @@ header{
 }
 .story{
     background-color: #245852;
-    width: 100%;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -197,20 +197,23 @@ header{
     justify-content: space-between;
 }
 
+.story_right img{
+    width: 100%;
+}
 
-
-
-
+.story_left{
+    width: 40%;
+}
 .story_left_p{
     color: white;
-    font-size: 25px;
+    font-size: 1.2rem;
     font-weight: 300;
     padding-bottom: 20px;
 
 }
 
 .story_title{
-    font-size: 45px;
+    font-size: 2.5rem;
     font-weight: bold;
     color: white;
     line-height: 150%;
@@ -218,7 +221,7 @@ header{
 
 .product{
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
 }
 
 .product{
@@ -229,10 +232,13 @@ header{
 
 .product_left{
     position: relative;
+    padding-right: 50px;
+    
 }
 .product_left img{
     display: block;
     object-fit: cover;
+    width: 100%;
 }
 .product_card{
     padding: 1.5rem 2.5rem;
@@ -249,7 +255,7 @@ header{
 }
 
 .product_card_title{
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: bold;
     color: black;
     padding: 15px 0;
@@ -257,7 +263,7 @@ header{
 }
 
 .product_card hr{
-    width:50%;
+    width:45%;
     text-align:center;
     
 }
@@ -276,30 +282,29 @@ header{
 }
 
 .product_right{
-    width: 584px;
+    width: 45%px;
 }
 
 .footer{
     width: 100%;
-    height: 654px;
     background-color: #245852;
     display: flex;
-    align-items: center;    
+    justify-content: center;    
     
 }
 
 .footer nav{
-    width: 1370px;
     display: flex;
     flex-direction: column;
-    gap: 80px;
-    padding-left: 250px; 
+    padding: 40px 0;
+    gap: 40px;
+    
 
 }
 
 .footer nav a{
     color: white;
-    font-size: 25px;
+    font-size: 1.2rem;
     font-weight: 400;
 }
 
